--- a/css/main.css
+++ b/css/main.css
@@ -33,8 +33,8 @@ button {
 
 header {
   position: relative;
-  height: 40px;
-  background: #292929;
+  height: 24px;
+  background: #202020;
   padding: 15px;
   z-index: 2;
 }
@@ -47,29 +47,33 @@ header #searchField {
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  top: 18px;
+  top: 12px;
 }
 
 header #searchField #videoInput {
   border-radius: 2px 0 0 2px;
   color: #fff;
   font-size: 16px;
-  width: 580px;
+  width: 590px;
   height: 30px;
   margin: 0;
-  background: #191919;
+  background: #121212;
   border: 1px solid #404040;
-  padding: 2px 8px;
+  padding: 0 9px;
 }
 
 header #searchField #videoInput:focus {
   border: 1px solid #3076ca;
 }
 
+header #searchField #videoInput::-webkit-input-placeholder {
+  color: #838383;
+}
+
 header #searchField #searchBtn {
   border: 1px solid #404040;
   border-radius: 0 2px 2px 0;
-  padding: 7px 22px;
+  padding: 5px 22px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -111,11 +115,14 @@ header #toggleMenu {
   -webkit-transition: .2s;
   transition: .2s;
   border-radius: 50%;
-  margin: -5px 0 0 -5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 4px 10px;
 }
 
 header #toggleMenu span {
-  font-size: 26px;
+  font-size: 24px;
   -webkit-transition: .4s;
   transition: .4s;
   padding: 10px;
@@ -189,49 +196,51 @@ main .menuOut .menuButton {
 }
 
 main .menuOut .menuButton span {
-  font-size: 26px;
+  font-size: 24px;
   vertical-align: middle;
   color: #7b7b7b;
 }
 
 main .menuOut .menuButton p {
+  font-size: 14px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  margin-left: 20px;
+  margin: 3px 0 0 20px;
+}
+
+main .menuOut .menuButton:first-child {
+  margin-top: 20px;
 }
 
 main .menuOut #smolStroke {
   width: 100%;
-  height: 2px;
+  height: 1px;
   background: #3d3d3d;
-  margin: 20px 0;
+  margin: 15px 0;
 }
 
 main .menuIn {
   position: relative;
   left: 0;
-  width: 80px;
+  width: 70px;
 }
 
 main .menuIn .menuButton {
-  padding: 20px 0;
+  padding: 18px 0;
 }
 
 main .menuIn .menuButton span {
   width: 100%;
-  font-size: 28px;
+  font-size: 24px;
   text-align: center;
   color: #7b7b7b;
 }
 
 main .menuIn .menuButton p {
   text-align: center;
-  font-size: 10px;
-}
-
-main .menuIn #smolStroke {
-  display: none;
+  font-size: 9px;
+  color: #7b7b7b;
 }
 
 main .menuIn .menuButtonActive span {
@@ -244,7 +253,7 @@ main .menu {
   left: 0;
   height: calc(100vh - 70px);
   z-index: 1;
-  background: #272727;
+  background: #202020;
 }
 
 main .menu .menuButton {
@@ -268,6 +277,10 @@ main .menu .menuButtonActive span {
 
 main .menu .menuButtonActive:hover {
   background: #5b5b5b !important;
+}
+
+main .menu .menuButtonActive p {
+  color: #fff;
 }
 
 main #themes {
