--- a/css/main.scss
+++ b/css/main.scss
@@ -39,8 +39,8 @@ button {
 
 header {
     position: relative;
-    height: 40px;
-    background: rgb(41, 41, 41);
+    height: 24px;
+    background: rgb(32, 32, 32);
     padding: 15px;
     z-index: 2;
     #searchField {
@@ -48,25 +48,28 @@ header {
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
-        top: 18px;
+        top: 12px;
         #videoInput {
             border-radius: 2px 0 0 2px;
             color: #fff;
             font-size: 16px;
-            width: 580px;
+            width: 590px;
             height: 30px;
             margin: 0;
-            background: rgb(25, 25, 25);
+            background: rgb(18, 18, 18);
             border: 1px solid rgb(64, 64, 64);
-            padding: 2px 8px;
+            padding: 0 9px;
             &:focus {
                 border: 1px solid rgb(48, 118, 202);
+            }
+            &::-webkit-input-placeholder {
+                color: rgb(131, 131, 131);
             }
         }
         #searchBtn {
             border: 1px solid rgb(64, 64, 64);
             border-radius: 0 2px 2px 0;
-            padding: 7px 22px;
+            padding: 5px 22px;
             display: inline-flex;
             background: rgb(64, 64, 64);
             span {
@@ -100,12 +103,15 @@ header {
         background: transparent;
         transition: .2s;
         border-radius: 50%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin: 4px 10px;
         span {
-            font-size: 26px;
+            font-size: 24px;
             transition: .4s;
             padding: 10px;
         }
-        margin: -5px 0 0 -5px;
         &:active {
             background: #565656;
         }
@@ -165,41 +171,43 @@ main {
         .menuButton {
             padding: 10px 25px;
             span {
-                font-size: 26px;
+                font-size: 24px;
                 vertical-align: middle;
                 color: rgb(123, 123, 123);
             }
             p {
+                font-size: 14px;
                 display: inline-flex;
-                margin-left: 20px;
+                margin: 3px 0 0 20px;
+            }
+            &:first-child {
+                margin-top: 20px;
             }
         }
         #smolStroke {
             width: 100%;
-            height: 2px;
+            height: 1px;
             background: #3d3d3d;
-            margin: 20px 0;
+            margin: 15px 0;
         }
     }
     .menuIn {
         position: relative;
         left: 0;
-        width: 80px;
+        width: 70px;
         .menuButton {
-            padding: 20px 0;
+            padding: 18px 0;
             span {
                 width: 100%;
-                font-size: 28px;
+                font-size: 24px;
                 text-align: center;
                 color: rgb(123, 123, 123)
             }
             p {
                 text-align: center;
-                font-size: 10px;
+                font-size: 9px;
+                color: rgb(123, 123, 123);
             }
-        }
-        #smolStroke {
-            display: none;
         }
         .menuButtonActive span {
             color: rgb(221, 221, 221) !important;
@@ -211,7 +219,7 @@ main {
         left: 0;
         height: calc(100vh - 70px);
         z-index: 1;
-        background: rgb(39, 39, 39);
+        background: rgb(32, 32, 32);
         .menuButton {
             width: 100%;
             background: transparent;
@@ -228,6 +236,9 @@ main {
             }
             &:hover {
                 background: rgb(91, 91, 91) !important;
+            }
+            p {
+                color: #fff;
             }
         }
     }
