chat, video and menu works now properly

--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,6 @@ button {
 }
 
 header {
-  position: relative;
   height: 24px;
   background: #202020;
   padding: 15px;
@@ -189,7 +188,8 @@ main #invite #copyInviteLink {
 }
 
 main .menuOut {
-  width: 250px;
+  opacity: .95;
+  width: 220px;
 }
 
 main .menuOut .menuButton {
@@ -309,54 +309,63 @@ main #themes #colorPicker {
   background: #00000055;
 }
 
-main #video {
+main .outerWrapper {
   position: absolute;
-  margin: 30px 0 0 30px;
-  display: inline-block;
+  left: 60px;
+  display: inline;
+  height: 100%;
+  width: calc(100% - 70px);
+}
+
+main .outerWrapper .wrapper {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 3fr 1.4fr;
+      grid-template-columns: 3fr 1.4fr;
+}
+
+main .outerWrapper .wrapper #video {
+  height: 65vh;
+  margin: 20px 0 0 20px;
   background: #fff;
-  height: 65%;
-  width: 60%;
   background-image: url("../img/yt_vid.png");
   background-size: contain;
 }
 
-main #chat {
-  position: absolute;
+main .outerWrapper .wrapper #chat {
+  height: 65vh;
+  margin: 20px 0 0 20px;
   background: #181818;
   border: 1px solid #303030;
-  display: inline-block;
-  margin: 30px 30px 0 0;
-  height: 65%;
-  width: 28%;
-  right: 0;
 }
 
-main #chat #selectionChat {
+main .outerWrapper .wrapper #chat #selectionChat {
   background: #202020;
   height: 60px;
   width: 100%;
 }
 
-main #chat #chatPanel {
+main .outerWrapper .wrapper #chat #chatPanel {
   height: calc(100% - 60px);
   overflow-y: scroll;
 }
 
-main #chat ::-webkit-scrollbar {
+main .outerWrapper .wrapper #chat ::-webkit-scrollbar {
   width: 18px;
   padding: 14px;
 }
 
-main #chat ::-webkit-scrollbar-track {
+main .outerWrapper .wrapper #chat ::-webkit-scrollbar-track {
   background: #0c0c0c;
 }
 
-main #chat ::-webkit-scrollbar-thumb {
+main .outerWrapper .wrapper #chat ::-webkit-scrollbar-thumb {
   background: #333333;
   border: 2px solid #0c0c0c;
 }
 
-main #chat p {
+main .outerWrapper .wrapper #chat p {
   font-size: 20px;
   margin: 10px;
 }
