--- a/css/main.scss
+++ b/css/main.scss
@@ -38,7 +38,6 @@ button {
 }
 
 header {
-    position: relative;
     height: 24px;
     background: rgb(32, 32, 32);
     padding: 15px;
@@ -168,7 +167,8 @@ main {
         }
     }
     .menuOut {
-        width: 250px;
+        opacity: .95;
+        width: 220px;
         .menuButton {
             padding: 10px 25px;
             span {
@@ -264,48 +264,53 @@ main {
             background: #00000055;
         }
     }
-    #video {
+    .outerWrapper {
         position: absolute;
-        margin: 30px 0 0 30px;
-        display: inline-block;
-        background: #fff;
-        height: 65%;
-        width: 60%;
-        background-image: url("../img/yt_vid.png");
-        background-size: contain;
-    }
-    #chat {
-        position: absolute;
-        background: rgb(24, 24, 24);
-        border: 1px solid rgb(48, 48, 48);
-        display: inline-block;
-        margin: 30px 30px 0 0;
-        height: 65%;
-        width: 28%;
-        right: 0;
-        #selectionChat {
-            background: rgb(32, 32, 32);
-            height: 60px;
+        left: 60px;
+        display: inline;
+        height: 100%;
+        width: calc(100% - 70px);
+        .wrapper {
             width: 100%;
-        }
-        #chatPanel {
-            height: calc(100% - 60px);
-            overflow-y: scroll;
-        }
-         ::-webkit-scrollbar {
-            width: 18px;
-            padding: 14px;
-        }
-         ::-webkit-scrollbar-track {
-            background: rgb(12, 12, 12);
-        }
-         ::-webkit-scrollbar-thumb {
-            background: rgb(51, 51, 51);
-            border: 2px solid rgb(12, 12, 12);
-        }
-        p {
-            font-size: 20px;
-            margin: 10px;
+            display: grid;
+            grid-template-columns: 3fr 1.4fr;
+            #video {
+                height: 65vh;
+                margin: 20px 0 0 20px;
+                background: #fff;
+                background-image: url("../img/yt_vid.png");
+                background-size: contain;
+            }
+            #chat {
+                height: 65vh;
+                margin: 20px 0 0 20px;
+                background: rgb(24, 24, 24);
+                border: 1px solid rgb(48, 48, 48);
+                #selectionChat {
+                    background: rgb(32, 32, 32);
+                    height: 60px;
+                    width: 100%;
+                }
+                #chatPanel {
+                    height: calc(100% - 60px);
+                    overflow-y: scroll;
+                }
+                 ::-webkit-scrollbar {
+                    width: 18px;
+                    padding: 14px;
+                }
+                 ::-webkit-scrollbar-track {
+                    background: rgb(12, 12, 12);
+                }
+                 ::-webkit-scrollbar-thumb {
+                    background: rgb(51, 51, 51);
+                    border: 2px solid rgb(12, 12, 12);
+                }
+                p {
+                    font-size: 20px;
+                    margin: 10px;
+                }
+            }
         }
     }
     #addToQueue {
