--- a/css/main.scss
+++ b/css/main.scss
@@ -276,27 +276,42 @@ main {
         .wrapper {
             width: 100%;
             display: grid;
-            grid-template-columns: 3fr 1.4fr;
+            grid-template-columns: 3fr 1.2fr;
             #video {
-                height: 65vh;
+                height: 75vh;
                 margin: 20px 0 0 20px;
                 background: #fff;
                 background-image: url("../img/yt_vid.png");
                 background-size: contain;
             }
             #chat {
-                height: 65vh;
+                height: 75vh;
                 margin: 20px 0 0 20px;
                 background: rgb(24, 24, 24);
                 border: 1px solid rgb(48, 48, 48);
-                #selectionChat {
-                    background: rgb(32, 32, 32);
-                    height: 60px;
+                overflow-y: hidden;
+                overflow-x: auto;
+                #chat-header {
+                    position: relative;
                     width: 100%;
+                    height: 60px;
+                    background: rgb(32, 32, 32);
+                    #dropdown-select {
+                        margin: 0;
+                        background: rgba(255, 255, 255, .3);
+                        outline: none;
+                        option {
+                            background: transparent;
+                        }
+                    }
                 }
-                #chatPanel {
-                    height: calc(100% - 60px);
+                #chat-panel {
+                    height: calc(100% - 140px);
                     overflow-y: scroll;
+                    position: relative;
+                }
+                #chat-queue {
+                    display: none;
                 }
                  ::-webkit-scrollbar {
                     width: 18px;
@@ -312,6 +327,29 @@ main {
                 p {
                     font-size: 20px;
                     margin: 10px;
+                }
+                #chat-footer {
+                    position: relative;
+                    bottom: 0;
+                    height: 140px;
+                    background: rgb(32, 32, 32);
+                    #smol-line {
+                        width: 80%;
+                        height: 1px;
+                        position: relative;
+                        margin: 5px;
+                        background: rgb(48, 48, 48);
+                    }
+                    #chat-hide {
+                        text-transform: uppercase;
+                        position: relative;
+                        font-size: 10px;
+                        font-weight: 900;
+                        left: 50%;
+                        transform: translateX(-50%);
+                        color: rgb(172, 172, 172);
+                        background: transparent;
+                    }
                 }
             }
         }
